--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="icon" href="logo.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zhunell</title>
+    <title>Urban Desing</title>
 </head>
 <body>
-    <header><img src="logo.png"></header>
+    <header><a href="index.html"><img src="logo.png" height="7%" width="7%"></a></header>
     <nav>
         <ul>
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">About </a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="page1.html">About </a></li>
+            <li><a href="page2.html">Services</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Developer</a></li>
             <li><a href="#">Contact</a></li>
@@ -22,7 +23,7 @@
     </nav>
     <section class="sec1"></section>
     <section class="sec2">
-        <h2>Somos Travel</h2>
+        <h2>Somos Urban</h2>
         <p>Seguridad, Calidad, Cortesía, Cumplimiento y Show: son la base de nuestra solidez, éxito y confianza. Somos una compañía que se formó en el año 2002.
             Quienes la creamos, hemos transitado más de 25 años en el mundo del turismo y el entretenimiento.
             Durante nuestra trayectoria transportamos a más de un millón de chicos de viaje de egresados a Bariloche.
@@ -52,7 +53,7 @@
             <div class="sec quickLinks">
                 <h2>Quick Links</h2>
                 <ul>
-                    <li><a href="#">About</a></li>
+                    <li><a href="page1.html">About</a></li>
                     <li><a href="#">FAQ</a></li>
                     <li><a href="#">Privacy Politicy</a></li>
                     <li><a href="#">Help</a></li>
