--- a/page1.html
+++ b/page1.html
@@ -10,6 +10,11 @@
     <title>About Us</title>
 </head>
 <body>
+    <div class="loader" id="loader">
+        <div class="loader-item"></div>
+        <div class="loader-item"></div>
+        <div class="loader-item"></div>
+    </div>
     <header><a href="index.html"><img src="logo.png" height="7%" width="7%"></a></header>
     <nav>
         <ul>
@@ -88,5 +93,13 @@
     <div class="copyrightText">
         <p>Copyright © 2022 Travel Rock. All Rights Reserved.</p>
     </div>
+
+    <script>
+        window.onload = function(){
+    var contenedor = document.getElementById("loader");
+    contenedor.style.visibility = "hidden";
+    contenedor.style.opacity = "0";
+}
+    </script>
 </body>
 </html>
