--- a/page1.html
+++ b/page1.html
@@ -94,12 +94,6 @@
         <p>Copyright © 2022 Travel Rock. All Rights Reserved.</p>
     </div>
 
-    <script>
-        window.onload = function(){
-    var contenedor = document.getElementById("loader");
-    contenedor.style.visibility = "hidden";
-    contenedor.style.opacity = "0";
-}
-    </script>
+    <script src="main.js"></script>
 </body>
 </html>
