--- a/page2.html
+++ b/page2.html
@@ -18,9 +18,9 @@
     <header><a href="index.html"><img src="logo.png" height="7%" width="7%"></a></header>
     <nav>
         <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="page1.html">About </a></li>
-            <li><a href="page2.html">Services</a></li>
+            <li><a href="page2.html" class="active">Services</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Developer</a></li>
             <li><a href="#">Contact</a></li>
