--- a/page2.html
+++ b/page2.html
@@ -21,9 +21,9 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="page1.html">About </a></li>
             <li><a href="page2.html" class="active">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Developer</a></li>
             <li><a href="#">Contact</a></li>
+            <li><a href="#">Developer</a></li>
+            <li><a href="login.html">Log in</a></li>
         </ul>
     </nav>
     <section class="sec2">
